--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -21,7 +21,7 @@
                 <%-include('_comment')-%>
             <%}%>
         </ul> 
-    
+        <!-- Comment form -->
         <form action="/comments/create" id="add-comment-form" method="post">
             <input type="text" name="content" placeholder="Add a Comment..." required>
             <input type="hidden" name="post" value= <%= i._id %> >
