--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -16,13 +16,13 @@
         <div class="post-content">
             <%= i.content %>
         </div>
-        <ul id="post-comment-<%= post._id %>">
+        <ul id="post-comment-<%= i._id %>">
             <%for( comment of i.comments){%>
                 <%-include('_comment')-%>
             <%}%>
         </ul> 
         <!-- Comment form -->
-        <form action="/comments/create" id="add-comment-form-<%= post._id %>" method="post">
+        <form action="/comments/create" id="add-comment-form-<%= i._id %>" method="post">
             <input type="text" name="content" placeholder="Add a Comment..." required>
             <input type="hidden" name="post" value= <%= i._id %> >
             <button type="submit" >Add</button>
